Fixes #4334 - Word wrap in Knowledge Base with tables from mobile view perspective

--- a/app/assets/stylesheets/knowledge_base.scss
+++ b/app/assets/stylesheets/knowledge_base.scss
@@ -941,6 +941,7 @@ b {
 
 .article-content {
   display: block;
+  overflow-wrap: anywhere;
 
   p,
   ol,
@@ -964,7 +965,7 @@ b {
 
   table {
     table-layout: auto;
-    word-break: break-all;
+    word-break: keep-all;
     border-style: hidden;
     border-collapse: collapse;
     font-variant-numeric: lining-nums tabular-nums;
